add task method
